@@ -1,5 +1,10 @@
 2004-11-09 hugo303
 
+	* tests/check_check_master.c src/check.h.in:
+	Changed failure message for fail_if.
+
+2004-11-09 hugo303
+
 	* src/check.c, src/check.h.in, src/check_impl.h, src/check_run.c,
 	tests/check_check_master.c, tests/check_check_sub.c:
 	Added support for timeouts on tests, enabling detection of
